# turboenv

./: .coverage  .editorconfig  .env  AGENTS.md  CHANGELOG.md  README.md  manage.py  pyproject.toml  pytest.toml  turbocov  workspace.env.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: tests.yaml
src/: exceptions.py  main.py
src/turboenv/: __main__.py  exceptions.py  main.py  plugins.py  typings.py
tests/: test_conditionals.py  test_integrations.py  test_klass.py  test_turbo_env.py
tests/quickapi/: main.py
tests/testapp/: settings.py  wsgi.py
