[project]
name = "turboenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "dotenv>=0.9.9",
    "factory-boy>=3.3.3",
    "pytest>=9.0.3",
    "pytest-aio>=2.1.7",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
]

[tool.pytest.ini_options]
# addopts = "--cov=turboenv --cov-report html"
